fixed stamp gallery going off screen

--- a/src/components/stampGallery/imageGallery.scss
+++ b/src/components/stampGallery/imageGallery.scss
@@ -1,1 +1,6 @@
 @import "~react-image-gallery/styles/scss/image-gallery.scss";
+
+
+.image-gallery-image {
+    max-height: calc(100vh - 320px) !important;
+}
